[package]
name = "vv-rs"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Numrich <anumrich@hotmail.com>", "planaria"]
description = "A fork of vv by planaria."
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["vst3"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
rustfft = "*"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
